RESOLVED FIXED110609
Multiple Layout Test crashes (ASSERT) on chromium linux debug after r143727
https://bugs.webkit.org/show_bug.cgi?id=110609
Summary Multiple Layout Test crashes (ASSERT) on chromium linux debug after r143727
Vsevolod Vlasov
Reported 2013-02-22 07:52:54 PST
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fevents%2Fdisplay-none-on-focus-crash.html An example of failing test: fast/forms/time-multiple-fields/time-multiple-fields-spinbutton-click-in-iframe.html Probable cause: caused by http://trac.webkit.org/changeset/143727
Attachments
Patch (1.67 KB, patch)
2013-02-22 08:10 PST, Allan Sandfeld Jensen
tonikitoo: review+
Vsevolod Vlasov
Comment 1 2013-02-22 07:53:10 PST
crash log for DumpRenderTree (pid 21207): STDOUT: <empty> STDERR: ASSERTION FAILED: isRectBasedTest() && other.isRectBasedTest() STDERR: ../../third_party/WebKit/Source/WebCore/rendering/HitTestResult.cpp(732) : void WebCore::HitTestResult::append(const WebCore::HitTestResult&) STDERR: 1 0x7fd924725a19 STDERR: 2 0x7fd92483462b STDERR: 3 0x7fd9248dfdd1 STDERR: 4 0x7fd924729c86 STDERR: 5 0x7fd92472fd1c STDERR: 6 0x7fd924970f03 STDERR: 7 0x7fd9248a9270 STDERR: 8 0x7fd924766126 STDERR: 9 0x7fd92476562d STDERR: 10 0x7fd9247661d7 STDERR: 11 0x7fd92476562d STDERR: 12 0x7fd9248dfdd1 STDERR: 13 0x7fd92486d806 STDERR: 14 0x7fd92486d389 STDERR: 15 0x7fd92486dad8 STDERR: 16 0x7fd92486d0d9 STDERR: 17 0x7fd92486c24d STDERR: 18 0x7fd92495a24e STDERR: 19 0x7fd92495a20b STDERR: 20 0x7fd925867528 STDERR: 21 0x7fd92430c7f5 STDERR: 22 0x7fd924267c31 STDERR: 23 0x7fd924312df9 STDERR: 24 0x7fd9285d14ed STDERR: 25 0x7fd9285d974a STDERR: 26 0x7fd9285c9023 STDERR: 27 0x7fd9285c88b1 STDERR: 28 0x7fd92532f52a STDERR: 29 0x7fd92532f6f7 STDERR: 30 0x7fd92a8e1a06 STDERR: 31 0x7fd92a8dc39a STDERR: Received signal 11 SEGV_MAPERR 0000bbadbeef STDERR: [0x7fd9292b00e0] base::debug::StackTrace::StackTrace() STDERR: [0x7fd9292af98a] base::debug::(anonymous namespace)::StackDumpSignalHandler() STDERR: [0x7fd91e22f8f0] <unknown> STDERR: [0x7fd924725a23] WebCore::HitTestResult::append() STDERR: [0x7fd92483462b] WebCore::RenderFrameBase::nodeAtPoint() STDERR: [0x7fd9248dfdd1] WebCore::RenderObject::hitTest() STDERR: [0x7fd924729c86] WebCore::InlineBox::nodeAtPoint() STDERR: [0x7fd92472fd1c] WebCore::InlineFlowBox::nodeAtPoint() STDERR: [0x7fd924970f03] WebCore::RootInlineBox::nodeAtPoint() STDERR: [0x7fd9248a9270] WebCore::RenderLineBoxList::hitTest() STDERR: [0x7fd924766126] WebCore::RenderBlock::hitTestContents() STDERR: [0x7fd92476562d] WebCore::RenderBlock::nodeAtPoint() STDERR: [0x7fd9247661d7] WebCore::RenderBlock::hitTestContents() STDERR: [0x7fd92476562d] WebCore::RenderBlock::nodeAtPoint() STDERR: [0x7fd9248dfdd1] WebCore::RenderObject::hitTest() STDERR: [0x7fd92486d806] WebCore::RenderLayer::hitTestContents() STDERR: [0x7fd92486d389] WebCore::RenderLayer::hitTestLayer() STDERR: [0x7fd92486dad8] WebCore::RenderLayer::hitTestList() STDERR: [0x7fd92486d0d9] WebCore::RenderLayer::hitTestLayer() STDERR: [0x7fd92486c24d] WebCore::RenderLayer::hitTest() STDERR: [0x7fd92495a24e] WebCore::RenderView::hitTest() STDERR: [0x7fd92495a20b] WebCore::RenderView::hitTest() STDERR: [0x7fd925867528] WebCore::EventHandler::hitTestResultAtPoint() STDERR: [0x7fd92430c7f5] WebKit::WebViewImpl::handleMouseDown() STDERR: [0x7fd924267c31] WebKit::PageWidgetDelegate::handleInputEvent() STDERR: [0x7fd924312df9] WebKit::WebViewImpl::handleInputEvent() STDERR: [0x7fd9285d14ed] WebTestRunner::EventSender::mouseDown() STDERR: [0x7fd9285d974a] WebTestRunner::CppBoundClass::MemberCallback<>::run() STDERR: [0x7fd9285c9023] WebTestRunner::CppBoundClass::invoke() STDERR: [0x7fd9285c88b1] WebTestRunner::CppNPObject::invoke() STDERR: [0x7fd92532f52a] WebCore::npObjectInvokeImpl() STDERR: [0x7fd92532f6f7] WebCore::npObjectMethodHandler() STDERR: [0x7fd92a8e1a06] v8::internal::HandleApiCallHelper<>() STDERR: [0x7fd92a8dc39a] v8::internal::Builtin_Impl_HandleApiCall() STDERR: [0x7fd92a8dc36b] v8::internal::Builtin_HandleApiCall() STDERR: [0x3054b58062ee] <unknown> STDERR: r8: 00007fd917c607e0 r9: 00007fd9262664de r10: 00007fd92a7fb228 r11: 0000000000000000 STDERR: r12: 0000000000003280 r13: 0000000000000001 r14: 0000000000000000 r15: 00007fff9f7b3260 STDERR: di: 0000000000000000 si: 00000000efcdab90 bp: 00007fff9f7b0f70 bx: 00007fff9f7b25e0 STDERR: dx: 00007fd91e21be00 ax: 00000000bbadbeef cx: 00007fd91df75acd sp: 00007fff9f7b0ee0 STDERR: ip: 00007fd924725a23 efl: 0000000000010246 cgf: 0000000000000033 erf: 0000000000000006 STDERR: trp: 000000000000000e msk: 0000000000000000 cr2: 00000000bbadbeef
Allan Sandfeld Jensen
Comment 2 2013-02-22 08:10:00 PST
Allan Sandfeld Jensen
Comment 3 2013-02-22 08:14:42 PST
Allan Sandfeld Jensen
Comment 4 2013-02-22 09:56:58 PST
Csaba Osztrogonác
Comment 5 2013-02-22 10:10:12 PST
It broke the minimal build. Could you fix it?
Allan Sandfeld Jensen
Comment 6 2013-02-22 10:29:57 PST
(In reply to comment #5) > It broke the minimal build. Could you fix it? It broke all builds. I fixed it in r143747.
Note You need to log in before you can comment on or make changes to this bug.