Multiple Layout Test crashes (ASSERT) on chromium linux debug after r143727 https://bugs.webkit.org/show_bug.cgi?id=110609

Reviewed by Antonio Gomes.

Point based hit tests should not append but assign HitTestResults.

* rendering/RenderFrameBase.cpp:
(WebCore::RenderFrameBase::nodeAtPoint):

Canonical link: https://commits.webkit.org/128868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143730 268f45cc-cd09-0410-ab3c-d52691b4dbfc